stage: fix shift, modularize css

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -14,163 +14,5 @@ a:hover {
   text-decoration:none;
 }
 
-header {
-  position:fixed;
-  top:0;
-  left:0;
-  background-color:rgba(255,255,255,0.9);
-  text-align:center;
-  z-index:100;
-
-  nav {
-    text-align:right;
-  }
-}
-  .header-cont {
-    padding:2em 3em 1em 3em;
-  }
-  .drawer-push header {
-    left:-20em;
-  }
-  header nav,header ul {
-    float:none;
-    display:inline-block;
-    padding:0;
-  }
-    header li {
-      list-style:none;
-      float:left;
-    }
-    header li + li {
-      margin-left:1em;
-    }
-    header li a {
-      padding:0.75em 0.5em;
-      display:inline-block;
-      text-transform:uppercase;
-      letter-spacing:0.1em;
-      color:#666;
-    }
-      header a:hover:not(.small-button) {
-        border-bottom:1px dotted #ccc;
-      }
-  .header-text {
-    padding:0.75em;
-    display:inline-block;
-    text-transform:uppercase;
-    position:relative;
-  }
-  .header-title {
-    float:left;
-    text-transform:uppercase;
-    font-size:1.5em;
-    margin:0;
-    font-family:'Raleway';
-    font-weight:700;
-    padding:0.5em;
-    color:#000;
-    text-align:left;
-  }
-    .header-title:hover {
-      opacity:0.5;
-    }
-    .header-title span {
-      font-weight:300;
-    }
-.tasks-cont {
-    padding:7em 3.5em;
-    text-align:center;
-
-    .wrap {
-        float:none;
-        display:inline-block;
-        text-align:center;
-        width:90%;
-        max-width:40em;
-
-        h1 {
-            font-weight:600;
-            text-transform:uppercase;
-            font-size:2em;
-        }
-    }
-
-    .divider {
-        width:100%;
-        border-bottom:1px solid #eee;
-        padding:1.5em 1em 0.5em 1em;
-        color:#c9c9c9;
-        text-transform:uppercase;
-        font-size:0.9em;
-        letter-spacing:0.1em;
-        float:left;
-    }
-
-    .task {
-        width: 100%;
-        margin-left:2em;
-        margin-top:1em;
-        float:left;
-        background-color:#FFF;
-        box-shadow:0 0 0.25em 0 rgba(0,0,0,0.2);
-        float:left;
-        padding:0.75em 1em;
-        text-align:left;
-
-        a {
-            border-bottom:1px dotted blue;
-        }
-
-        input {
-            z-index:15;
-            display:block;
-        }
-
-        .action {
-            width:1em;
-            float:left;
-        }
-
-        span {
-            float:left;
-        }
-
-        .name {
-            margin:0 0 0 1em;
-        }
-
-        .byline {
-            font-size:0.8em;
-            color:#c90;
-            text-align:left;
-            margin:0 0 0 1em;
-        }
-
-        .inactive-bar {
-            width:104%;
-            left:-1.5%;
-            position:absolute;
-            top:1.5em;
-            height:2px;
-            background-color:rgba(0,0,0,0.15);
-            display:block;
-            z-index:10;
-            display:none;
-        }
-
-        .text {
-            cursor:pointer;
-            width:calc(100% - 1em);
-            float:right;
-        }
-    }
-
-    .task.inactive {
-        opacity:0.75;
-        color:#ccc;
-
-        .inactive-bar {
-            display:block;
-        }
-    }
-}
+@import 'header';
+@import 'tasks';
